Specify word-wrap to avoid iOs issue

--- a/app/assets/stylesheets/strips.scss
+++ b/app/assets/stylesheets/strips.scss
@@ -423,6 +423,7 @@ main {
   border-radius: 12px;
   position: relative;
   p {
+    word-wrap: break-word;
     font-size: 0.8rem;
     margin: 0;
     &:last-child {
